--- a/forms.html
+++ b/forms.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Forms</title>
+  </head>
+  <body>
+    <form action="" method="post">
+      <label for="full-name">Full name</label>
+      <br />
+      <input type="text" id="full-name" placeholder="Your Name" />
+      <br />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Forms</title>
-</head>
-<form action="" method="">
+      <label for="email">Email address</label>
+      <br />
+      <input type="email" id="email" placeholder="email@mail.com" />
+      <br />
 
-</form>
-<body>
-</body>
+      <label for="telephone">Phone number</label>
+      <br />
+      <input type="tel" id="telephone" placeholder="1234-5678" />
+      <br />
 
+      <label for="date">Date</label>
+      <br />
+      <input type="date" id="date" />
+      <br />
+
+      <label for="num-guests">Number of guests</label>
+      <br />
+      <select name="num-guests" id="num-guests">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+      </select>
+      <br />
+
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
